--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     
     <h1>Module JS 15g</h1>
 
+    <script src="/assets/js/Homework.js"></script>
+    <!--
     <script src="/assets/js/base.js"></script>
+    -->
 </body>
 </html>
